# Granite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  OVERVIEW.md  README.md  build.gradle  camera_test.cpp  cube_test.cpp  graph_test.cpp  main.cpp  sandbox.cpp  settings.gradle
application/: CMakeLists.txt  application.cpp  application.hpp  application_android.cpp  application_cli_wrapper.cpp  application_cli_wrapper.hpp  application_default.cpp  application_entry.cpp  application_glfw.cpp  application_glue.hpp  application_interface_query.cpp  application_khr_display.cpp  application_libretro.cpp  application_null.cpp  application_wsi.cpp  application_wsi.hpp  application_wsi_events.hpp  global_managers.cpp  global_managers.hpp  input.cpp  input.hpp  scene_viewer_application.cpp  scene_viewer_application.hpp
audio/: CMakeLists.txt  audio_aaudio.cpp  audio_aaudio.hpp  audio_events.hpp  audio_fft_eq.cpp  audio_fft_eq.hpp  audio_interface.cpp  audio_interface.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_oboe.cpp  audio_oboe.hpp  audio_opensl.cpp  audio_opensl.hpp  audio_pulse.cpp  audio_pulse.hpp  audio_resampler.cpp  audio_resampler.hpp  audio_wasapi.cpp  audio_wasapi.hpp  vorbis_stream.cpp  vorbis_stream.hpp
compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp  glsl_compiler.cpp  slang_compiler.cpp  slang_compiler.hpp
filesystem/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  filesystem.cpp  filesystem.hpp  path.cpp  path.hpp  volatile_source.hpp
importers/: CMakeLists.txt  gltf.cpp  gltf.hpp  importers.hpp
math/: CMakeLists.txt  aabb.cpp  aabb.hpp  frustum.cpp  frustum.hpp  interpolation.cpp  interpolation.hpp  math.cpp  math.hpp  render_parameters.hpp  simd.hpp  simd_headers.hpp  transforms.cpp  transforms.hpp
network/: CMakeLists.txt  looper.cpp  netfs.hpp  netfs_client.cpp  netfs_server.cpp  netfs_server.hpp  network.cpp  network.hpp  socket.cpp  tcp_listener.cpp
physics/: CMakeLists.txt  physics_system.cpp  physics_system.hpp
renderer/: CMakeLists.txt  abstract_renderable.hpp  animation_system.cpp  animation_system.hpp  camera.cpp  camera.hpp  common_renderer_data.cpp  common_renderer_data.hpp  cpu_rasterizer.cpp  cpu_rasterizer.hpp  event.cpp  event.hpp  flat_renderer.cpp  flat_renderer.hpp  font.cpp  font.hpp  ground.cpp  ground.hpp  light_export.cpp  light_export.hpp  lights.cpp  lights.hpp  mainloop.cpp  mainloop.hpp  material.hpp  material_manager.cpp  material_manager.hpp  material_util.cpp  material_util.hpp  mesh.cpp  mesh.hpp  mesh_manager.cpp  mesh_manager.hpp  mesh_util.cpp  mesh_util.hpp  node.cpp  node.hpp  ocean.cpp  ocean.hpp  render_components.cpp  (+26 more)
scene-export/: CMakeLists.txt  camera_export.cpp  camera_export.hpp  gltf_export.cpp  gltf_export.hpp  light_export.cpp  light_export.hpp  meshlet.cpp  meshlet_export.cpp  meshlet_export.hpp  obj.cpp  obj.hpp  rgtc_compressor.cpp  rgtc_compressor.hpp  texture_compression.cpp  texture_compression.hpp  texture_utils.cpp  texture_utils.hpp  tmx_parser.cpp  tmx_parser.hpp
scene_formats/: CMakeLists.txt  camera_export.cpp  camera_export.hpp  gltf.cpp  gltf.hpp  gltf_export.cpp  gltf_export.hpp  light_export.cpp  light_export.hpp  memory_mapped_texture.cpp  memory_mapped_texture.hpp  obj.cpp  obj.hpp  rgtc_compressor.cpp  rgtc_compressor.hpp  scene_formats.cpp  scene_formats.hpp  texture_compression.cpp  texture_compression.hpp  texture_decoder.cpp  texture_decoder.hpp  texture_files.cpp  texture_files.hpp  texture_loading.cpp  texture_loading.hpp  texture_utils.cpp  texture_utils.hpp  tmx_parser.cpp  tmx_parser.hpp
tests/: 3d_uav_clear_test.cpp  CMakeLists.txt  animation_rail_test.cpp  asset_manager_test.cpp  async_compute_present.cpp  async_spec_constant.cpp  atomic_append_buffer_test.cpp  audio_application.cpp  audio_test.cpp  baked_test.cpp  bandlimited_pixel_test.cpp  basic_compute.cpp  binding_model.cpp  bindless_test.cpp  bitmap_mesh_test.cpp  bullet_test.cpp  calibrated_timestamps.cpp  clustering_visualizer.cpp  coherency.cpp  conservative_raster_test.cpp  controller_test.cpp  cooperative_task_test.cpp  cube_array_test.cpp  d3d11_interop_test.cpp  d3d12_interop_test.cpp  debug_channel.cpp  dgc-test-compute.sh  dgc-test-graphics.sh  dgc_test.cpp  dgc_test_compute.cpp  dgc_test_graphics.cpp  display_timing.cpp  divergent_lod_test.cpp  ecs_test.cpp  external_object_overlap.cpp  external_objects.cpp  fault_sandbox.cpp  fragment_output_components.cpp  gl_interop_test.cpp  gltf_viewer_simple.cpp  (+48 more)
threading/: CMakeLists.txt  task_composer.cpp  task_composer.hpp  thread_group.cpp  thread_group.hpp  thread_latch.cpp  thread_latch.hpp
tools/: CMakeLists.txt  aa_bench.cpp  aa_bench_to_csv.py  android-cmake-wrapper.sh  bench_aa.py  berry.py  bin_to_text.py  bitmap_mesh.cpp  bitmap_to_mesh.cpp  bitmap_to_mesh.hpp  blobify.py  brdf_lut_generate.cpp  build-steamrt-aarch64.sh  build-steamrt-inside-aarch64.sh  build-steamrt-inside.sh  build-steamrt.sh  build_smaa_luts.cpp  bush.py  clover.py  clover2.py  cluttergen.cpp  convert_cube_to_environment.cpp  convert_equirect_to_environment.cpp  create_android_build.py  gltf_repacker.cpp  gtx_cat.cpp  gtx_convert.cpp  heightgen.cpp  image_compare.cpp  image_packer.cpp  ktx_convert.cpp  ktxcat.cpp  ktxcube.cpp  normalgen.cpp  obj_to_gltf.cpp  png2chunky.cpp  png2ktx.cpp  setup_android_toolchain.sh  slangmosh.cpp  sweep_scene.py  (+11 more)
ui/: CMakeLists.txt  click_button.cpp  click_button.hpp  flat_renderer.cpp  flat_renderer.hpp  font.cpp  font.hpp  horizontal_packing.cpp  horizontal_packing.hpp  image_widget.cpp  image_widget.hpp  label.cpp  label.hpp  slider.cpp  slider.hpp  sprite.cpp  sprite.hpp  toggle_button.cpp  toggle_button.hpp  ui_manager.cpp  ui_manager.hpp  vertical_packing.cpp  vertical_packing.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
util/: CMakeLists.txt  aligned_alloc.cpp  aligned_alloc.hpp  arena_allocator.cpp  arena_allocator.hpp  array_view.hpp  async_object_sink.hpp  atomic_append_buffer.hpp  bitmap_to_mesh.cpp  bitmap_to_mesh.hpp  bitops.hpp  cli_parser.cpp  cli_parser.hpp  compile_time_hash.hpp  cooperative_task.cpp  (+49 more)
(+662 files in other folders)
